--- a/server-Rest/asciidoc/overview.adoc
+++ b/server-Rest/asciidoc/overview.adoc
@@ -4,7 +4,7 @@
 This is a sample spec for our REST API
 
 === Version information
-Version: v1
+Version: v2
 
 === Contact information
 Contact: Suresh Satyam
@@ -17,7 +17,7 @@ License URL: http://www.testcompany.com/licenses/LICENSE-2.0.html
 Terms of service: http://www.testcompany.com/terms-and-conditions
 
 === URI scheme
-Host: www.[host]:[port]
-BasePath: /v1
+Host: http://localhost:8082/
+BasePath: /department/rest
 Schemes: HTTP, HTTPS
 
