--- a/server-Rest/asciidoc/paths.adoc
+++ b/server-Rest/asciidoc/paths.adoc
@@ -113,6 +113,33 @@ get department's list with information about average salary by each department. 
 
 * departments
 
+=== delete department by id
+----
+DELETE /rest/departments/{id}
+----
+
+==== Description
+:hardbreaks:
+delete department by id
+
+==== Parameters
+[options="header"]
+|===
+|Type|Name|Description|Required|Schema|Default
+|PathParameter|id|identifier of department|true|integer (int32)|
+|===
+
+==== Responses
+[options="header"]
+|===
+|HTTP Code|Description|Schema
+|404|department with such identifier doesn't exists|No Content
+|===
+
+==== Tags
+
+* departments
+
 === get department by id
 ----
 GET /rest/departments/{id}
@@ -140,33 +167,6 @@ get department by id
 ==== Produces
 
 * application/json
-
-==== Tags
-
-* departments
-
-=== delete department by id
-----
-DELETE /rest/departments/{id}
-----
-
-==== Description
-:hardbreaks:
-delete department by id
-
-==== Parameters
-[options="header"]
-|===
-|Type|Name|Description|Required|Schema|Default
-|PathParameter|id|identifier of department|true|integer (int32)|
-|===
-
-==== Responses
-[options="header"]
-|===
-|HTTP Code|Description|Schema
-|404|department with such identifier doesn't exists|No Content
-|===
 
 ==== Tags
 
@@ -217,7 +217,7 @@ get all employees
 [options="header"]
 |===
 |HTTP Code|Description|Schema
-|200|successful operation|<<Department>> array
+|200|successful operation|<<Employee>> array
 |===
 
 ==== Produces
@@ -307,8 +307,8 @@ get filtered list of employees by params
 [options="header"]
 |===
 |Type|Name|Description|Required|Schema|Default
-|QueryParameter|from|from|false|string (date)|
-|QueryParameter|to||false|string (date)|
+|QueryParameter|from|like '2016-01-01'|false|string (date)|
+|QueryParameter|to|like '2016-01-01'|false|string (date)|
 |QueryParameter|departmentid||false|integer (int32)|
 |===
 
@@ -316,39 +316,7 @@ get filtered list of employees by params
 [options="header"]
 |===
 |HTTP Code|Description|Schema
-|200|successful operation|<<Department>> array
-|===
-
-==== Produces
-
-* application/json
-
-==== Tags
-
-* employees
-
-=== get employee by id
-----
-GET /rest/employees/{id}
-----
-
-==== Description
-:hardbreaks:
-get employee by id
-
-==== Parameters
-[options="header"]
-|===
-|Type|Name|Description|Required|Schema|Default
-|PathParameter|id|identifier of employee|true|integer (int32)|
-|===
-
-==== Responses
-[options="header"]
-|===
-|HTTP Code|Description|Schema
-|200|successful operation|<<Employee>>
-|404|employee with such identifier doesn't exists|No Content
+|200|successful operation|<<Employee>> array
 |===
 
 ==== Produces
@@ -382,6 +350,38 @@ delete employee by id
 |200|successful operation|<<Employee>>
 |404|employee with such identifier doesn't exists|No Content
 |===
+
+==== Tags
+
+* employees
+
+=== get employee by id
+----
+GET /rest/employees/{id}
+----
+
+==== Description
+:hardbreaks:
+get employee by id
+
+==== Parameters
+[options="header"]
+|===
+|Type|Name|Description|Required|Schema|Default
+|PathParameter|id|identifier of employee|true|integer (int32)|
+|===
+
+==== Responses
+[options="header"]
+|===
+|HTTP Code|Description|Schema
+|200|successful operation|<<Employee>>
+|404|employee with such identifier doesn't exists|No Content
+|===
+
+==== Produces
+
+* application/json
 
 ==== Tags
 
